force-app/main/default/objects/Icon_Details__c/Icon_Details__c.object-meta.xml
<CustomObject>
    <description>icon description</description>
    <label>Icon Details</label>
    <nameField>
        <label>Icon Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Icons Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>