force-app/main/default/objects/Icon_Details__c/fields/Custom_Icom__c.field-meta.xml
<CustomField>
    <fullName>Custom_Icom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Icom</label>
    <type>Checkbox</type>
</CustomField>