force-app/main/default/objects/Icon_Details__c/fields/Custom_Icon__c.field-meta.xml
<CustomField>
    <fullName>Custom_Icon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Icon</label>
    <type>Checkbox</type>
</CustomField>