force-app/main/default/objects/Icon_Details__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>