force-app/main/default/objects/Icon_Details__c/fields/Icons_package__c.field-meta.xml
<CustomField>
    <fullName>Icons_package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Icons package</label>
    <referenceTo>Icons_package__c</referenceTo>
    <relationshipName>Icons_detail</relationshipName>
    <type>Lookup</type>
</CustomField>