force-app/main/default/objects/Icon_Details__c/fields/Visit_Plan__c.field-meta.xml
<CustomField>
    <fullName>Visit_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit Plan</label>
    <referenceTo>Visit_Plan__c</referenceTo>
    <relationshipLabel>Icons Details</relationshipLabel>
    <relationshipName>Icons_Details</relationshipName>
    <type>Lookup</type>
</CustomField>